<resources>
    <string name="app_name">MadeIt</string>
    <string name="MadeIt_Button_info">Button to send made it message</string>
    <string name="MadeIT_Button">Made it!</string>
    <string name="Login_Signup">Login/Sign up…</string>
    <string name="Settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="custom_responses">Custom Responses</string>

    <string name="response_1">Response 1</string>
    <string name="response_2">Response 2</string>
    <string name="response_3">Response 3</string>
    <string name="response_4">Response 4</string>
    <string name="response_5">Response 5</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="server_header">Server</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="login">Login</string>
    <string name="ip_config">Server IP Address</string>
    <string name="port_config">Server Port</string>
    <string name="custom_response1">Custom Response 1</string>
    <string name="custom_response2">Custom Response 2</string>
    <string name="custom_response3">Custom Response 3</string>
    <string name="custom_response4">Custom Response 4</string>
    <string name="custom_response5">Custom Response 5</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
