<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="response_1"
            app:title="@string/custom_response1"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="response_2"
            app:title="@string/custom_response2"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="response_3"
            app:title="@string/custom_response3"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="response_4"
            app:title="@string/custom_response4"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="response_5"
            app:title="@string/custom_response5"
            app:useSimpleSummaryProvider="true" />

        <!--<ListPreference-->
            <!--app:defaultValue="reply"-->
            <!--app:entries="@array/reply_entries"-->
            <!--app:entryValues="@array/reply_values"-->
            <!--app:key="reply"-->
            <!--app:title="@string/reply_title"-->
            <!--app:useSimpleSummaryProvider="true" />-->


    </PreferenceCategory>

    <!--<PreferenceCategory app:title="@string/sync_header">-->

        <!--<SwitchPreferenceCompat-->
            <!--app:key="sync"-->
            <!--app:title="@string/sync_title" />-->

        <!--<SwitchPreferenceCompat-->
            <!--app:dependency="sync"-->
            <!--app:key="attachment"-->
            <!--app:summaryOff="@string/attachment_summary_off"-->
            <!--app:summaryOn="@string/attachment_summary_on"-->
            <!--app:title="@string/attachment_title" />-->

    <!--</PreferenceCategory>-->

    <PreferenceCategory app:title="@string/server_header">
        <EditTextPreference
            app:key="ip_config"
            app:title="@string/ip_config"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
